# fenban

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  Justfile  NOTICE  README.md  build.rs  deno.json  input.tailwind.css  package.json
.github/workflows/: release.yml  rust-clippy.yml
.zed/: settings.json
assets/: tailwind.css
examples/: basic.rs  custom_columns.rs  main.rs  performance_test.rs  quickstart.rs  test_custom_config.rs
icons/: icon.icns
src/: algorithm.rs  io.rs  lib.rs  main.rs  model.rs  stats.rs
src/core/: algorithm.rs  history.rs  io.rs  mod.rs  model.rs  stats.rs
src/ui/: mod.rs  route.rs
src/ui/components/: column_config.rs  column_config_view.rs  division_config.rs  division_config_view.rs  history.rs  mod.rs  preview_data_view.rs  processing.rs  processing_view.rs  results.rs  results_view.rs  select_file.rs  select_file_view.rs  types.rs  updater.rs  utils.rs
src/ui/views/: home.rs  mod.rs  nav.rs  updater.rs
src/updater/: builder.rs  error.rs  github.rs  macos.rs  mod.rs  utils.rs  windows.rs
