[package]
name = "fenban"
version = "0.2.3"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
description = "分班助手"
license = "MIT OR Apache-2.0"

[features]
windows-bundle = []

[dependencies]
anyhow = "1"
calamine = "0.31"
chrono = "0.4"
csv = "1.4"
dioxus = { version = "0.7.1", features = ["desktop"] }
dirs = "6"
fs-err = "3"
futures-util = "0.3"
http = "1"
image = "0.25"
num_cpus = "1"
octocrab = "0.47"
once_cell = "1"
opener = "0.7"
rand = "0.9"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
rfd = "0.15"
rust_xlsxwriter = "0.91"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = { version = "2", features = ["serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
flate2 = "1"
osakit = { version = "0.3", features = ["full"] }
zip = { version = "6", default-features = false, features = [
    "deflate",
    "bzip2",
    "time",
] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[target."cfg(target_os = \"windows\")".build-dependencies]
winresource = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
