[package]
name = "fenban"
version = "0.2.6"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
description = "分班助手"
license = "MIT OR Apache-2.0"

[features]
windows-bundle = []

[dependencies]
anyhow = "1"
calamine = "0.31"
chrono = "0.4"
csv = "1.4"
dioxus = { version = "0.7.1", features = ["desktop"] }
dirs = "6"
fs-err = "3"
image = "0.25"
num_cpus = "1"
once_cell = "1"
opener = "0.8.3"
rand = "0.9"
rayon = "1"
release-hub = "0.2"
rfd = "0.15"
rust_xlsxwriter = "0.92"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"

[target."cfg(target_os = \"windows\")".build-dependencies]
winresource = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
